--- a/health_assessment.html
+++ b/health_assessment.html
@@ -16,10 +16,10 @@
   </head>
 
   <body> 
-    <h1>Health Assessment</h1><br>
-    <label>How are you doing today?<br>
-    <textarea name="healtheval" rows="30" cols="100"></textarea></label><br>
-    <button class="submit" type="submit">Submit</button>
+    <center><h1>Health Assessment</h1></center><br>
+    <center><label>How are you doing today?</label></center><br>
+    <center><textarea name="healtheval"></textarea></center><br>
+    <center><button class="submit" type="submit">Submit</button></center>
   </body>
 
 </html>
