--- a/mental.html
+++ b/mental.html
@@ -15,17 +15,17 @@
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   
-  <body>
-      
-    <h1>Crisis Line</h1><br>
-    <label><b>Mental Line:</b> How can we help?<br>
-    <textarea name="crisisline" rows="10" cols="100"></textarea></label><br>
-    <center><label>If you would also like to make an appointment, click here: </label>
-      <a href="/booking.html">
-        <button type="button" class="btn btn-lg btn-dark">Make an appointment</button>
-      </a></center>
-    <button class="submit" type="submit">Submit</button>
-  </body>
+    <body>
+      <h1>Crisis Line</h1><br>
+      <center><label><b>Mental Line:</b> How can we help?</label></center><br>
+      <center><textarea name="crisisline" rows="10" cols="100"></textarea></center><br>
+      <center><button class="submit" type="submit">Submit</button></center>
+      <center><label>If you would also like to make an appointment, click here: </label>
+        <a href="/booking.html">
+          <button type="button" class="btn btn-dark">Make an appointment</button>
+        </a></center>
+    </body>
+  
 
 
 </html>
