--- a/referrals.html
+++ b/referrals.html
@@ -15,13 +15,13 @@
   </head>
   <body>
       
-    <h1>Refer Someone</h1>
-    <label>Who do you want to refer?<br><input name="refername"/></label><br><br>
-    <label>Can you explain what is going on with them?<br>
-    <textarea name="referralline" rows="30" cols="100"></textarea><br></label>
-    
-    <button class="submit" type="submit">Submit</button>
+    <center><h1>Refer Someone</h1></center>
+    <center><label>Who do you want to refer?<br><input name="refername"/></label></center><br><br>
+    <label><center>Can you explain what is going on with them?<br></center>
+    <center><textarea name="referralline" rows="30" cols="100"></textarea><br></center></label>
+    <center><button class="submit" type="submit">Submit</button></center>
   </body>
+
 
   
 
