--- a/report.html
+++ b/report.html
@@ -15,12 +15,12 @@
   </head>
   <body>
       
-    <h1>Report a Teacher</h1>
-    <label>Who do you want to report?<br><input name="reportname"/></label><br><br>
-    <label>What is the issue with this teacher?<br>
-    <textarea name="reportline" rows="30" cols="100"></textarea><br></label>
+    <center><h1>Report a Teacher</h1></center>
+    <center><label>Who do you want to report?<br><input name="reportname"/></label></center><br><br>
+    <label><center>What is the issue with this teacher?</center><br>
+    <center><textarea name="reportline" rows="30" cols="100"></textarea></center><br></label>
     
-    <button class="submit" type="submit">Submit</button>
+    <center><button class="submit" type="submit">Submit</button></center>
   </body>
 
   
