--- a/medical.html
+++ b/medical.html
@@ -16,14 +16,13 @@
     <script src="/script.js" defer></script>
   
   <body>
-      
     <h1>Crisis Line</h1><br>
-    <label><b>Medical Line:</b> How can we help?<br>
-    <textarea name="crisisline" rows="10" cols="100"></textarea></label><br>
-    <button class="submit" type="submit">Submit</button>
+    <center><label><b>Medical Line:</b> How can we help?</label></center><br>
+    <center><textarea name="crisisline" rows="10" cols="100"></textarea></center><br>
+    <center><button class="submit" type="submit">Submit</button></center>
     <center><label>If you would also like to make an appointment, click here: </label>
       <a href="/booking.html">
-        <button type="button" class="btn btn-lg btn-dark">Make an appointment</button>
+        <button type="button" class="btn btn-dark">Make an appointment</button>
       </a></center>
   </body>
 
