Making everything forms

--- a/health_assessment.html
+++ b/health_assessment.html
@@ -17,9 +17,11 @@
 
   <body> 
     <h1>Health Assessment</h1><br>
-    <label>How are you doing today?<br>
-    <textarea name="healtheval" rows="30" cols="100"></textarea></label><br>
-    <button class="submit" type="submit">Submit</button>
+      <form>
+        <label>How are you doing today?<br>
+        <textarea name="healtheval" rows="30" cols="100"></textarea></label><br>
+        <button class="submit" type="submit">Submit</button>
+      </form>
   </body>
 
 </html>
