--- a/medical.html
+++ b/medical.html
@@ -18,9 +18,11 @@
   <body>
       
     <h1>Crisis Line</h1><br>
-    <label><b>Medical Line:</b> How can we help?<br>
-    <textarea name="crisisline" rows="10" cols="100"></textarea></label><br>
-    <button class="submit" type="submit">Submit</button>
+      <form> 
+        <label><b>Medical Line:</b> How can we help?<br>
+        <textarea name="crisisline" rows="10" cols="100"></textarea></label><br>
+        <button class="submit" type="submit">Submit</button>
+      </form>
     <center><label>If you would also like to make an appointment, click here: </label>
       <a href="/booking.html">
         <button type="button" class="btn btn-lg btn-dark">Make an appointment</button>
