--- a/referrals.html
+++ b/referrals.html
@@ -16,11 +16,12 @@
   <body>
       
     <h1>Refer Someone</h1>
-    <label>Who do you want to refer?<br><input name="refername"/></label><br><br>
-    <label>Can you explain what is going on with them?<br>
-    <textarea name="referralline" rows="30" cols="100"></textarea><br></label>
-    
-    <button class="submit" type="submit">Submit</button>
+    <form>
+      <label>Who do you want to refer?<br><input name="refername"/></label><br><br>
+      <label>Can you explain what is going on with them?<br>
+      <textarea name="referralline" rows="30" cols="100"></textarea><br></label>
+      <button class="submit" type="submit">Submit</button>
+    </form>
   </body>
 
   
