--- a/report.html
+++ b/report.html
@@ -16,11 +16,12 @@
   <body>
       
     <h1>Report a Teacher</h1>
-    <label>Who do you want to report?<br><input name="reportname"/></label><br><br>
-    <label>What is the issue with this teacher?<br>
-    <textarea name="reportline" rows="30" cols="100"></textarea><br></label>
-    
-    <button class="submit" type="submit">Submit</button>
+    <form>
+      <label>Who do you want to report?<br><input name="reportname"/></label><br><br>
+      <label>What is the issue with this teacher?<br>
+      <textarea name="reportline" rows="30" cols="100"></textarea><br></label>
+      <button class="submit" type="submit">Submit</button>
+    </form>
   </body>
 
   
