--- a/mental.html
+++ b/mental.html
@@ -18,13 +18,15 @@
   <body>
       
     <h1>Crisis Line</h1><br>
-    <label><b>Mental Line:</b> How can we help?<br>
-    <textarea name="crisisline" rows="10" cols="100"></textarea></label><br>
+      <form>
+        <label><b>Mental Line:</b> How can we help?<br>
+        <textarea name="crisisline" rows="10" cols="100"></textarea></label><br>
+        <button class="submit" type="submit">Submit</button>
+      </form>
     <center><label>If you would also like to make an appointment, click here: </label>
       <a href="/booking.html">
         <button type="button" class="btn btn-lg btn-dark">Make an appointment</button>
       </a></center>
-    <button class="submit" type="submit">Submit</button>
   </body>
 
 
