Styling for index.html and studentcenter.html

--- a/index.html
+++ b/index.html
@@ -24,23 +24,27 @@
     <!-- this is the start of content -->
     <div class = "login-container">
       <div class = "login">
-      <h3 class = "ask">
+        <h3 class = "ask">
         Please enter your school credentials:
-      </h3>
-      <form class= "login-info" >
+        </h3>
+        <form class= "login-info" >
 <!--       <div class = "label">Username:</div>  -->
-      <input type="text" name="username" id="Uname" placeholder= "username" required/> 
-      <br><br>
+        <input type="text" name="username" id="Uname" placeholder= "username" required/> 
+        <br><br>
 <!--       <div class = "label">Password:</div> -->
-      <input type="password" name="password"  id="Pass" placeholder = "Password" required/> 
-      <br><br>
-      <input type="submit" id="log" value="Submit">
-      <br><br>  
-      <input type="checkbox">    
-      <span>Remember me</span> 
-      <br><br>    
-      <a href="#">Forgot Password?</a>  
-    </form>
+        <input type="password" name="password"  id="Pass" placeholder = "Password" required/> 
+        <br>
+        <input type="checkbox"> 
+        <span>Remember me</span> 
+        <br><br>
+        <input type="submit" id="log" value="Submit">
+        <br><br>  
+        <div class = "bottom">
+          
+          <br>  
+          <a href="#">Forgot Password?</a> 
+        </div>
+      </form>
     </div>
     </div>
     
