--- a/mental.html
+++ b/mental.html
@@ -18,7 +18,7 @@
   <body>
       
     <h1>Crisis Line</h1><br>
-      <form>
+      <form class="menetalline">
         <label><b>Mental Line:</b> How can we help?<br>
         <textarea name="crisisline" rows="10" cols="100"></textarea></label><br>
         <button class="submit" type="submit">Submit</button>
