--- a/report.html
+++ b/report.html
@@ -16,7 +16,7 @@
   <body>
       
     <h1>Report a Teacher</h1>
-    <form>
+    <form class="reportform">
       <label>Who do you want to report?<br><input name="reportname"/></label><br><br>
       <label>What is the issue with this teacher?<br>
       <textarea name="reportline" rows="30" cols="100"></textarea><br></label>
