--- a/referrals.html
+++ b/referrals.html
@@ -16,7 +16,7 @@
   <body>
       
     <h1>Refer Someone</h1>
-    <form>
+    <form class="referform">
       <label>Who do you want to refer?<br><input name="refername"/></label><br><br>
       <label>Can you explain what is going on with them?<br>
       <textarea name="referralline" rows="30" cols="100"></textarea><br></label>
