add healtheval form

--- a/health_assessment.html
+++ b/health_assessment.html
@@ -17,7 +17,7 @@
 
   <body> 
     <h1>Health Assessment</h1><br>
-      <form>
+      <form class="assessment">
         <label>How are you doing today?<br>
         <textarea name="healtheval" rows="30" cols="100"></textarea></label><br>
         <button class="submit" type="submit">Submit</button>
