--- a/faculty_center.html
+++ b/faculty_center.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/style.css" />
 
     <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
+    <script src="/bundle.js" defer></script>
   </head>
 
 <h1><center>What would you like help with today?</center></h1><br><br>
