--- a/medical.html
+++ b/medical.html
@@ -13,16 +13,16 @@
     <link rel="stylesheet" href="/style.css" />
 
     <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
+    <script src="/bundle.js" defer></script>
   
   <body>
       
     <h1>Crisis Line</h1><br>
-      <form> 
-        <label><b>Medical Line:</b> How can we help?<br>
-        <textarea name="crisisline" rows="10" cols="100"></textarea></label><br>
-        <button class="submit" type="submit">Submit</button>
-      </form>
+    <form class="medical-note"> 
+      <label><b>Medical Line:</b> How can we help?<br>
+      <textarea name="crisisline" rows="10" cols="100"></textarea></label><br>
+      <input class="submit" type="submit"></input>
+    </form>
     <center><label>If you would also like to make an appointment, click here: </label>
       <a href="/booking.html">
         <button type="button" class="btn btn-lg btn-dark">Make an appointment</button>
