--- a/mental.html
+++ b/mental.html
@@ -22,7 +22,7 @@
       <div class = "medical-form">
         <form class = "medical-info"> 
             <center><h3 class = "ask-user">Mental Line: How can we help?</h3> </center>
-           <textarea name="crisisline" rows="10" cols="65" placeholder = "Please type here..."></textarea>
+           <textarea name="crisisline" rows="10" cols="40%" placeholder = "Please type here..."></textarea>
           <br>
           <button class="submit" type="submit">Submit</button>
           <br><br>
