--- a/report.html
+++ b/report.html
@@ -20,7 +20,7 @@
           <label><p class = "ask-report">Who do you want to report?</p><br><br>
           <input class = "input-reportname" name="reportname" placeholder = "Name" /></label><br><br><br>
           <label><p class = "ask-report">What is the issue with this teacher?</p><br><br>
-            <textarea class = "text-holder" name="reportline" rows="20" cols="60" placeholder = "Please type here..."></textarea><br></label>
+            <textarea class = "text-holder" name="reportline" rows="20" cols="50%" placeholder = "Please type here..."></textarea><br></label>
             <button class="submit" type="submit">Submit</button>
         </form>
       </div>
